Minor test cleanups
Mostly removing unnecessary `throws` clutter.